--- a/views/user/signup.jade
+++ b/views/user/signup.jade
@@ -19,7 +19,7 @@ html
             br
             input(class="u-signInput" id="u-password" placeholder="Desired Password" type="password")
             br
-            input(class="u-signInput" id="u-studentNumber" placeholder="Student Number")
+            input(class="u-signInput" id="u-studentEmail" placeholder="University Email e.g. joe.t@student.ufv.ca")
             br
             a(class="u-forgotLink" href="/u/login") Already have an account?
             br
@@ -34,8 +34,6 @@ html
             
             br
             br
-            div(id="faculty-email-cover" style="display:none;margin-bottom:10px;")
-                input(class="u-signInput" placeholder="Faculty email, e.g. john.smith@ufv.ca")
             input(class="u-signInput" id="u-signSubmit" value="Signup" type="submit")
             
             
