Changed location of border

--- a/views/home.jade
+++ b/views/home.jade
@@ -12,6 +12,8 @@ html
         div(style="min-width:1000px;position:absolute;top:0px;left:50%;margin-left:-500px;margin-top:20px;font-family:Open Sans;font-size:12px;")
             a(href="/contact")
                 div(href="/contact" id="contactButton" style="color:#000;float:left;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Contact
+            a(href="/mission")
+                div(href="/mission" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Mission
             a(href="/donate")
                 div(href="/donate" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Donate
             div(href="/u/login" id="loginMain")
