--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -52,7 +52,7 @@ block bodyContent
         //Filter by Campus
         br
         br
-        div(id="lowerControls" style="float:right;display:none;width:100%;background-color:#fff;border-top:1px solid #DDD;height:100px")
+        div(id="lowerControls" style="float:right;display:none;width:100%;background-color:#fff;border-bottom:1px solid #DDD;height:100px")
             // div(style="height:80%;width:10px;border:1px solid rgba(0,0,0,0.1);margin-left:10px;margin-to:10px;border-radius:10px;")
             table(id="campusList" style="float:right;margin-top:25px;margin-right:20px;")
                 tr
