Changed some stuff again.

--- a/views/MainTemplate.jade
+++ b/views/MainTemplate.jade
@@ -28,7 +28,7 @@ html
                     div#accountName=username
                     div(style="padding:12px;display:inline-block;")
                         a(title="Home" href="/")
-                            div(id="homeIconCover" style="height:26px;width:26px;border:1px solid #CCC;border-radius:25px;overflow:hidden;padding:4px 4px 4px 5px;cursor:pointer;box-sizing:border-box;")
+                            div(id="homeIconCover" style="height:26px;width:26px;border:1px solid transparent;border-radius:25px;overflow:hidden;padding:4px 4px 4px 5px;cursor:pointer;box-sizing:border-box;")
                                 img(src="/images/homeIcon.png" height="15px")
                     #menuDrop
                             
