--- a/views/home.jade
+++ b/views/home.jade
@@ -25,6 +25,7 @@ html
                 img(src="/images/mainLogo.png" style="float:left;margin-top:5px;" height="50px")
                 |Schedular.
             p(class="subTitle") a clean, easy to use, course registration platform
+            p(class="subTitle") now in UFV 
             a(href="/u/signup")
                 button(id="callToAction") Sign Me Up!
         a(href="http://www.facebook.com/schedular")
