--- a/views/main/create.jade
+++ b/views/main/create.jade
@@ -124,10 +124,12 @@ block headContent
 block bodyContent
     section#mainContent
         #termContainer(style="margin-left:30px;margin-top:100px")
-            #winterIcon(style="height:42px;width:42px;padding:5px;box-sizing:border-box;border:1px solid #DDD;float:left;")
+            #winterIcon(style="height:42px;width:42px;padding:5px;box-sizing:border-box;border:1px solid #DDD;float:left;cursor:pointer;")
                 img(src="/images/snowflake.png" width="30px")
-            #summerIcon(style="height:42px;width:42px;padding:5px;box-sizing:border-box;border:1px solid #DDD;float:left;margin-left:2px;opacity:0.4")
+            #summerIcon(style="height:42px;width:42px;padding:5px;box-sizing:border-box;border:1px solid #DDD;float:left;cursor:pointer;margin-left:2px;opacity:0.2")
                 img(src="/images/sun.png" width="30px")
+            #summerIcon(style="height:42px;width:42px;padding:5px;box-sizing:border-box;border:1px solid #DDD;float:left;cursor:pointer;margin-left:2px;opacity:0.2")
+                img(src="/images/leafIcon.png" width="30px")
         #centerContainer
             p#mainTitle Your Courses
             input#courseInput(type="text",placeholder="Enter your courses, e.g. Academic Writing, ENGL105")
