--- a/views/main/builder.jade
+++ b/views/main/builder.jade
@@ -3,13 +3,13 @@ extends ../MainTemplate
 block headContent
     link(rel="stylesheet",href="/css/builder.main.css")
     title="Schedule Builder"
-
+    style.
+        .date-0{
+            border-left-color:transparent;
+        }
 block bodyContent
     div(id="crnBar-wrap" )
         ul( id="crnBar" style="float:left;padding-left:0;")
-            li
-                span(style="padding:4px;float:left;") CRNs: 
-                span(id="b-crnAddButton") Add +
             br
             br
     div(id="b-builderWrap" style="float:right;margin-left:-200px;position:absolute;top:123px;left:50%;width:704px;")
@@ -20,8 +20,8 @@ block bodyContent
         input(id="b-crnInput" placeholder="Enter CRNs with a comma inbetween e.g. 10973,10981,10921")
         div(class="b-scheduleWrap" data-crn="" style="float:left;")
             div(class="b-dayLabelWrap")
-                each day in [' ','Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday']
-                    div(class="b-dayLabel")=day
+                each day,index in ['','Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday']
+                    div(class="b-dayLabel date-"+index)=day
             br
             div(class="b-timeLabelWrap")
                 each time, index in ['8:00 am','9:00 am','10:00 am','11:00 am','12:00 am','1:00 pm','2:00 pm','3:00 pm','4:00 pm','5:00 pm','6:00 pm','7:00 pm','8:00 pm','9:00 pm']
