--- a/public/css/templateCSS.css
+++ b/public/css/templateCSS.css
@@ -1,3 +1,14 @@
+/* don't select */
+.no_s{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+
+
 
     #navbar{
         position:absolute;
