--- a/public/css/home.css
+++ b/public/css/home.css
@@ -47,3 +47,16 @@
 #loginMain{
     cursor: pointer;
 }
+    #loginText{
+        float:right;
+        padding:10px;
+        border:1px solid #3498db;
+        margin-top:20px;
+        transition:background .25s, border .25s;
+    }
+        #loginText:hover{
+            background:#3498db;
+            border:1px solid #3498db;
+            color:#FFF;
+            transition:background .25s, border .25s;
+        }
