--- a/views/user/signup.jade
+++ b/views/user/signup.jade
@@ -19,19 +19,10 @@ html
             br
             input(class="u-signInput" id="u-password" placeholder="Desired Password" type="password")
             br
-            input(class="u-signInput" id="u-studentEmail" placeholder="University Email e.g. joe.t@student.ufv.ca")
+            input(class="u-signInput" id="u-studentEmail" placeholder="University Email e.g. joe.t@ufv.ca")
             br
             a(class="u-forgotLink" href="/u/login") Already have an account?
             br
-            
-            div(id="accountType-wrap")
-                div(class="aT-selectionCircle" data-accountType="student" id="active-aT-selectionCircle")
-                label(class="aT-selectionLabel") I'm a Student
-                br
-                div(class="aT-selectionConnector")
-                div(class="aT-selectionCircle" data-accountType="faculty")
-                label(class="aT-selectionLabel") I'm Faculty
-            
             br
             br
             input(class="u-signInput" id="u-signSubmit" value="Signup" type="submit")
