building framework for user-notifications

--- a/views/main/builder.jade
+++ b/views/main/builder.jade
@@ -18,10 +18,13 @@ block headContent
             position:absolute;
         }
 block bodyContent
+    div(style="position:absolute;top:70px;left:0px;text-align:center;width:100%;")
+        label( id="notif" style="padding:5px 20px 5px 20px;background:#1abc9c;color:#FFF;font-size:12px;font-weight:300;font-family:Open Sans;") auto-saved at 2:05am
     div(id="crnBar-wrap" )
         input(style="width:200px;color:#222;background:#EEE;border:0;padding:7px;outline:0;font-family:Open Sans;font-size:11px;margin-top:10px;" placeholder="Type to find more courses")
         input(style="height:29px;width:29px;border:0;padding:0;float:left;margin-top:10px;background:url(/images/magnifyingGlass.png) #EEE center center no-repeat;background-size:60%;outline:0;" type="button" value="")
-        ul( id="crnBar" style="float:left;padding-left:0;")
+        br
+        ul( id="crnBar" style="margin-top:-20px;float:left;padding-left:0;")
             br
             br
     div(id="b-builderWrap" style="float:right;margin-left:-200px;position:absolute;top:123px;left:50%;width:704px;")
